--- a/src/html/components/pc/pc-student-classpage-view/pc-student-classpage-view.html
+++ b/src/html/components/pc/pc-student-classpage-view/pc-student-classpage-view.html
@@ -38,14 +38,14 @@
 						type: 'JSON'
 					}).then(
 						(assignment) => {
-							if (window.location.hash.startsWith('#assignment/')) {
+							if (window.location.hash.startsWith('#class/')) {
 								this.buildWith(assignment);
 								this.transitionIn();
 							}
 						},
 						(error, xhr) => {
 							console.error(error);
-							if (window.location.hash.startsWith('#assignment/')) {
+							if (window.location.hash.startsWith('#class/')) {
 								alert('Failed to load \'' + resourceName + '.json\'');
 								e.preventDefault();
 							}
