--- a/src/html/components/pc/pc-login-view/pc-login-view.css
+++ b/src/html/components/pc/pc-login-view/pc-login-view.css
@@ -2,8 +2,7 @@
 	display: block;
 	width: 100%;
 	background-color: #009688;
-	top: 0 !important;
-	height: calc(100%);
+	height: calc(100% - 60px);
 	font-family: RobotoDraft, Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 :host:not([active]) {
