--- a/src/html/components/pc/pc-student-assignments-view/pc-student-assignments-view.html
+++ b/src/html/components/pc/pc-student-assignments-view/pc-student-assignments-view.html
@@ -8,7 +8,7 @@
 	<template>
 		<div id="loading-overlay"></div>
 		<h1 class="page-header">Assignments</h1>
-		<div class="container transitions fade-in">
+		<div class="container transitions in-fade-in">
 			<ul class="pager">
 				<li class="prev" on-click="_prevDay">←</li>
 				<li class="center">{{_prettifyDate(date)}}</li>
