--- a/src/html/components/pc/pc-student-classpage-view/pc-student-classpage-view.html
+++ b/src/html/components/pc/pc-student-classpage-view/pc-student-classpage-view.html
@@ -10,7 +10,7 @@
 			<paper-tab>Home</paper-tab>
 			<paper-tab>Resources</paper-tab>
 		</paper-tabs>
-		<div class="container transitions fade-in">
+		<div class="container transitions in-fade-in">
 			<p id="body">Welcome to [classname]!</p>
 		</div>
 	</template>
