--- a/src/html/components/pc/pc-student-assignment-view/pc-student-assignment-view.html
+++ b/src/html/components/pc/pc-student-assignment-view/pc-student-assignment-view.html
@@ -5,9 +5,9 @@
 	<link rel="import" type="css" href="/css/component-transitions.css"/>
 	<template>
 		<h1 class="page-header">Assignment Name</h1>
-		<div class="container transitions fade-in" id="details">
+		<div class="container transitions in-fade-in" id="details">
 		</div>
-		<ul class="container transitions rightpanel fade-in">
+		<ul class="container transitions rightpanel in-fade-in">
 			<li class="status assigned"><span></span></li>
 			<li class="dates">
 				<table>
