--- a/src/html/components/pc/pc-student-classpage-view/pc-student-classpage-view.css
+++ b/src/html/components/pc/pc-student-classpage-view/pc-student-classpage-view.css
@@ -9,8 +9,15 @@
 }
 :host paper-tabs {
 	position: relative;
-	background-color: #FFF;
 	margin-left: 15px;
 	margin-right: 15px;
 	--paper-tabs-selection-bar-color: #009688;
+}
+#content {
+	padding-top: 0;
+	padding-left: 0;
+	padding-right: 0;
+}
+#content > div {
+	margin: 19px;
 }
