--- a/src/html/components/pc/pc-stage/pc-stage.html
+++ b/src/html/components/pc/pc-stage/pc-stage.html
@@ -1,5 +1,5 @@
 <link rel="import" href="/components/polymer/polymer.html">
-<pc-loader target='["iron-media-query","paper-header-panel","pc-sidebar","pc-navbar","pc-login-view","pc-student-schedule-view","pc-loading-view","pc-student-assignments-view","pc-student-classpage-view","pc-student-assignment-view"]'></pc-loader>
+<pc-loader target='["iron-media-query","paper-header-panel","pc-sidebar","pc-navbar","pc-login-view","pc-student-schedule-view","pc-student-assignments-view","pc-student-classpage-view","pc-student-assignment-view"]'></pc-loader>
 <dom-module id="pc-stage">
 	<link rel="import" type="css" href="/css/component-transitions.css"/>
 	<link rel="import" type="css" href="pc-stage.css"/>
@@ -14,7 +14,6 @@
 					<paper-icon-button class="navbar-header-item" icon="menu" style="color: white;" on-tap="toggleDrawer"></paper-icon-button>
 				</pc-navbar>
 				<div main>
-					<pc-loading-view class="pc-view stage-mobile-observer" id="loading"></pc-loading-view>
 					<pc-login-view class="pc-view stage-mobile-observer pc-default-view" id="login"></pc-login-view>
 					<pc-student-schedule-view class="pc-view stage-mobile-observer" id="schedule"></pc-student-schedule-view>
 					<pc-student-assignments-view class="pc-view stage-mobile-observer" id="assignments"></pc-student-assignments-view>
@@ -29,7 +28,6 @@
 	<script>
 		Polymer({
 			is: "pc-stage",
-			
 			properties: {
 				brand: {
 					type: String,
@@ -93,13 +91,13 @@
 			_getDrawerStyle: function(drawerWidth) {
 				return "width: "+drawerWidth;
 			},
-			toggleDrawer() {
+			toggleDrawer: function() {
 				this.open = !this.open;
 			},
-			closeDrawer() {
+			closeDrawer: function() {
 				this.open = false;
 			},
-			loadView(name, element) {
+			loadView: function(name, element) {
 				//$('head').append($(ce('link')).attr({rel:'import',href:element}));
 				$(this)
 					.find('div[main]')
@@ -107,7 +105,7 @@
 						.addClass('pc-view stage-mobile-observer')
 						.attr({'id':name}));
 			},
-			showView(name, args, cancellable, navigate) {
+			showView: function(name, args, cancellable, navigate) {
 				console.log(name, args);
 				if (navigate) {
 					var hash = '#' + [name].concat(args).join('/');
@@ -153,7 +151,7 @@
 				tview.trigger('pc-view-postshow',{args:args});
 				//TODO transition code
 			},
-			_mobileUpdate(is,was) {
+			_mobileUpdate: function(is,was) {
 				var observers = $('.stage-mobile-observer');
 				if (is) {
 					observers.attr('mobile','');
